[maze project] Better visibility computation, fix battle music issues.

--- a/source/project-maze/style.css
+++ b/source/project-maze/style.css
@@ -75,7 +75,7 @@ div.maze-wrapper {
   background: steelblue;
 }
 
-.maze-cell.current:hover {
+.maze-cell.player:hover {
   background-color: gray;
 }
 
